# CNPM

./: .gitignore  07_Coding_Standards.md  1.py  Jenkinsfile  README.md  business_case.md  data.yml  deploy.sh  docker-compose-database.yml  docker-compose-grafana.yml  docker-compose.yml  install.sh  main.py  nginx.yml  redis.yml  run-server.sh  start-nginx.sh
ai/: google.js  index.js  package-lock.json  package.json
chatserver/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
client/: .env  .env.exam  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  README.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  setupTests.js  tailwind.config.js  vite.config.js
data/: README.md  database.txt  insert.sql  procedure.sql  query.sql  select-proc.sql  table.sql
data_raw/: .gitignore  insert.sql  mockdata.py  query.sql  select-proc.sql
gateway/: README.md  bun.lockb  jest.config.js  package.json
k8s/: .gitignore  README.md  backup-restore.sh  deploy-app.sh  init-master.sh  install-monitoring.sh  install-prerequisites.sh  join-worker.sh  setup-cluster.sh  update-dns.sh
load_balancer/: .env.exam  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
load_balancer/src/: main.rs
load_balancer/src/config/: mod.rs
load_balancer/src/handlers/: mod.rs
load_balancer/src/load/: mod.rs
nginx/: Dockerfile
proto/: ai.proto
server/: .env.example  .gitignore  Dockerfile  README.md  main.js  package-lock.json  package.json  test.sh  tsconfig.json
servers/: package.json
testchat/: package.json
(+440 files in other folders)
