[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"          # Web framework
tokio = { version = "1", features = ["full"] } # Runtime
reqwest = "0.11"      # Thư viện HTTP client
tower = "0.4"         # Middleware  request/response
serde = { version = "1.0", features = ["derive"] } #  JSON
dotenv = "0.15"
env_logger = "0.10"